<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/sunnyday_1920"
        android:contentDescription="@string/main_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Almaty Qalasy" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_name"
            tools:text="Clear Sky" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_temperature_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/day_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_description">

            <TextView
                android:id="@+id/main_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorWhite"
                android:textSize="100sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="18" />

            <ImageView
                android:id="@+id/item_hourly_degree"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/degree_icon"
                android:tint="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/main_temperature"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_degree" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/day_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            tools:text="Saturday"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_temperature_wrapper" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hour_forecast_wrapper"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_wrapper">

        <LinearLayout
            android:id="@+id/hr_01"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_height"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourly_forecast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/hr_02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hr_01" />

        <LinearLayout
            android:id="@+id/hr_02"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_height"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scroller_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour_forecast_wrapper">

        <ScrollView
            android:id="@+id/main_scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scroll_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/hr_03"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hr_height"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/daily_forecast_recycler_view" />

                <TextView
                    android:id="@+id/lead_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hr_03"
                    tools:text="Today: Partly Cloudy. Currently it's 13°." />

                <LinearLayout
                    android:id="@+id/hr_04"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hr_height"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lead_info" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_info"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hr_04">

                    <TextView
                        android:id="@+id/humidity_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorWhite60"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cloudiness_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="112dp"
                        android:text="@string/cloudiness"
                        android:textColor="@color/colorWhite60"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        tools:text="64%"
                        android:textColor="@color/colorWhite"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_header" />

                    <TextView
                        android:id="@+id/cloudiness_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorWhite"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="@+id/cloudiness_header"
                        app:layout_constraintTop_toBottomOf="@+id/cloudiness_header"
                        tools:text="43%" />

                    <LinearLayout
                        android:id="@+id/hr_05"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/hr_height"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorWhite"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_value" />

                    <TextView
                        android:id="@+id/wind_speed_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind_speed"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorWhite60"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hr_05" />

                    <TextView
                        android:id="@+id/pressure_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atmospheric_pressure"
                        android:textColor="@color/colorWhite60"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="@+id/cloudiness_header"
                        app:layout_constraintTop_toTopOf="@+id/wind_speed_header" />

                    <TextView
                        android:id="@+id/wind_speed_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorWhite"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/wind_speed_header"
                        tools:text="14 km/h" />

                    <TextView
                        android:id="@+id/pressure_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorWhite"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="@+id/pressure_header"
                        app:layout_constraintTop_toBottomOf="@+id/pressure_header"
                        tools:text="1014 hPa" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>